--- a/frontend/src/assets/main.css
+++ b/frontend/src/assets/main.css
@@ -1,10 +1,9 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 1fr minmax(0, 1000px) 1fr;
   padding: 2rem;
-  font-weight: normal;
 }
 
 a,
@@ -23,24 +22,22 @@ a,
 
 @media (min-width: 1024px) {
   body {
-    display: flex;
+    /* display: flex; */
     place-items: center;
   }
 
-  #app {
+  /* #app {
     display: grid;
     grid-template-columns: 1fr;
     padding: 0 2rem;
-  }
+  } */
 }
 
 body { 
   font-family: sans-serif; background-color: #f0f2f5; margin: 0; color: black 
 }
 #app-container { 
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px; 
+  grid-column: 2;
 }
 header { 
   text-align: center; margin-bottom: 2rem;
